Fix auto zoom on mobile

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-html {
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-}
 /* Base Styles */
 body {
   margin: 40px auto;
